Assign weights from bone envelopes not working with armature in scaled hierarchy #74247

Closed
opened 2020-02-27 00:32:10 +01:00 by Gordon Vart · 14 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]
I am trying to assign way to using envelopes on the bones instead of automatic weight assignment. I set the bone envelope distance to Encompass the mesh area that I'm trying to apply weights to. when I select the option to assign weights to the Bone oh, nothing happens. The same thing happens if I try to parent the entire Armature.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
Select the Armature
shift select the mesh
change the weight paint mode
control-click the bone
choose assign weights from bone envelope from the weight menu
expectation is that weights will be applied but they are not

spore5.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] I am trying to assign way to using envelopes on the bones instead of automatic weight assignment. I set the bone envelope distance to Encompass the mesh area that I'm trying to apply weights to. when I select the option to assign weights to the Bone oh, nothing happens. The same thing happens if I try to parent the entire Armature. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] Select the Armature shift select the mesh change the weight paint mode control-click the bone choose assign weights from bone envelope from the weight menu expectation is that weights will be applied but they are not [spore5.blend](https://archive.blender.org/developer/F8374163/spore5.blend)
Author

Added subscriber: @gvart

Added subscriber: @gvart
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...
Member

Well, this has to do with the scale of the whole setup:

  • Armature is parented to an empty at scale 0.01.
  • If that scale is applied (I did that to the Empty, the Armature -- beware! scaling an armature does not do this to the Envelope Radii & the Envelope Distance, so you have to do this separately [I did using {key Alt click} on those values and mutiplied by 100]), everything seems to work correctly again:

spore5_scale_applied.blend

Well, this has to do with the scale of the whole setup: - Armature is parented to an empty at scale 0.01. - If that scale is applied (I did that to the Empty, the Armature -- beware! scaling an armature does not do this to the Envelope Radii & the Envelope Distance, so you have to do this separately [I did using {key Alt click} on those values and mutiplied by 100]), everything seems to work correctly again: [spore5_scale_applied.blend](https://archive.blender.org/developer/F8377582/spore5_scale_applied.blend)
Member

In this case, I think I have to backflip confirming this, I assume this is not considered a bug...

In this case, I think I have to backflip confirming this, I assume this is not considered a bug...
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Might be related #45493 (Bone Heat weighting: failed (due to none of the vertices in an island being visible to any bones)) as well.
@dr.sybren mentioned this could be added to Animation_Weak_Areas Armatures_and_Negative_Scale

Might be related #45493 (Bone Heat weighting: failed (due to none of the vertices in an island being visible to any bones)) as well. @dr.sybren mentioned this could be added to [Animation_Weak_Areas Armatures_and_Negative_Scale ](https://wiki.blender.org/wiki/User:Sybren/Animation_Weak_Areas#Armatures_and_Negative_Scale)
Philipp Oeser changed title from Assign weights from bone envelopes not working to Assign weights from bone envelopes not working with armature in scaled hierarchy 2020-02-28 11:26:54 +01:00
Philipp Oeser self-assigned this 2020-02-28 12:39:34 +01:00
Member

I think the issue here is that in 2.8 we are not displaying the envelope scaled at all. Code [for calculating bone weights] multiplies by obmat, but display doesnt... So the user is fooled into setting up the envelop distances/radii just wrong afaict. Open up this one from 2.79 in both 2.79 and 2.8 to see the difference:

armature_envelope_scaled_279.blend

Lets see if I can fix the display of the envelope...

I think the issue here is that in 2.8 we are not displaying the envelope scaled at all. Code [for calculating bone weights] multiplies by obmat, but display doesnt... So the user is fooled into setting up the envelop distances/radii just wrong afaict. Open up this one from 2.79 in both 2.79 and 2.8 to see the difference: [armature_envelope_scaled_279.blend](https://archive.blender.org/developer/F8377801/armature_envelope_scaled_279.blend) Lets see if I can fix the display of the envelope...

This issue was referenced by 3fedfb1526

This issue was referenced by 3fedfb15261a1ae8d5c9920f3d37b83256b36de8

This issue was referenced by ee7034949f

This issue was referenced by ee7034949fd8a44e906f26cc18bc30af340c2ab9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

I have pushed ee7034949f now.
This will bring back the envelope display back to what it should be.

For your file though [in which you set up the envelopes "wrong" visually - because of said bug] that means you have to correct the envelope radii and distance (see above, use {key Alt click} and multiply by 100), or use this file where I did this for you
spore5_corrected.blend

Will close as resolved though, feel free to comment again if issues persist, thx for reporting!

I have pushed ee7034949f now. This will bring back the envelope display back to what it should be. For your file though [in which you set up the envelopes "wrong" visually - because of said bug] that means you have to correct the envelope radii and distance (see above, use {key Alt click} and multiply by 100), or use this file where I did this for you [spore5_corrected.blend](https://archive.blender.org/developer/F8384660/spore5_corrected.blend) Will close as resolved though, feel free to comment again if issues persist, thx for reporting!
Author

Truly appreciated. You guys are awesome. thanks again, and I will report bugs as I find them. :-)

Truly appreciated. You guys are awesome. thanks again, and I will report bugs as I find them. :-)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74247
No description provided.